# backend_mini_social

./: .gitignore  Cargo.toml  Dockerfile  Program.cs  Settings.cs  Startup.cs  appsettings.Development.json  appsettings.json  docker-compose.yml  netart.csproj
Controllers/: HomeController.cs  MediaController.cs  PostController.cs  RelationController.cs
LogicalCore/: PostCore.cs  RelationCore.cs  UserCore.cs
Models/: Post.cs  PostDatabaseSettings.cs  UsersDatabaseSettings.cs
Models/Post/: Post.cs
Models/Settings/: BucketNameSetting.cs  PostDatabaseSettings.cs  UsersDatabaseSettings.cs
Models/Users/: User.cs  UserComplete.cs  UserCompte.cs
Properties/: launchSettings.json
Services/: GoogleStorageService.cs  JwtService.cs  PostService.cs  UsersService.cs
Utilities/: PasswordSha256.cs
src/: lib.rs  main.rs  mongo_connection.rs  user.rs
src/handler/: connection.rs  cookie_helper.rs  mod.rs  postRoute.rs
src/model/: mod.rs  post.rs
