[package]
name = "backend_rocket_mongo"
version = "0.1.0"
authors = ["Cote Celeste <celeste@cote21.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.5.0-dev"
rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "master" }
bson = "*"
futures = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
sha3 = "0.9.1"
hex = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
git = "https://github.com/SergioBenitez/Rocket/"
branch = "master"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["sync"]
